--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.6.4",
     "antd-icons": "^0.1.0-alpha.1",
     "async": "^3.2.0",
+    "less": "^3.12.2",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
